# almost_sqlite

./: .gitignore  CMakeLists.txt  README.md  awerwse  run_test.bat  sql_app.sln  sql_app.vcxproj  sql_app.vcxproj.filters
almost_sql/: .gitignore  almost_sql.sln  almost_sql.vcxproj
dasha_code/dasha_ddd/: test_types.cpp  types.cpp  types.h
dasha_ddd/: Process_file.cpp
sql_app/: sql_app.sln
sql_app/sql_app/: sql_app.vcxproj  sql_app.vcxproj.filters
sql_app/sql_app/Debug/: sql_app.exe.recipe  sql_app.ilk  vc142.idb
sql_app/sql_app/Debug/sql_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sql_app.lastbuildstate
src/: Command.cpp  Command.h  Constraint_table.cpp  Process_file.cpp  ValidationError.cpp  ValidationError.h  db.cpp  metadata.cpp  metadata.h  parser.cpp  parser.h  serializer.h  service_table.c  service_table.cpp  test_integration.cpp  test_types.cpp  types.cpp  types.h  validator.h
